fixed templating issue

--- a/templates/user.html
+++ b/templates/user.html
@@ -1,7 +1,7 @@
 <div class='info'>
 	<div class='name'><strong>Name:</strong> <%= model.escape("name") %></div>
-	<div class='email'><strong>Favorite Color:</strong> <%= model.escape("color") %></div>
-	<div class='phone'><strong>Lucky Number:</strong> <%= model.escape("number") %></div>
+	<div class='color'><strong>Favorite Color:</strong> <%= model.escape("color") %></div>
+	<div class='number'><strong>Lucky Number:</strong> <%= model.escape("number") %></div>
 </div>
-<button class='delete-btn' model-id='delete<%= model.escape("id") %>'>Remove</button>
+<button class='delete-btn' model-id='delete<%= model.id %>'>Remove</button>
 <div class='clear'></div>
